comments and todo's, updated README.md