@@ -1,7 +1,7 @@
 package com.domain.controller;
 
 import com.domain.model.Order;
-import com.domain.model.OrderManagerModel;
+import com.domain.model.OrderManager;
 import com.domain.model.OrderStatusObserver;
 import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
@@ -11,6 +11,7 @@ import javafx.scene.control.ListView;
 import javafx.event.ActionEvent;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class OperatorController {
 
@@ -26,10 +27,10 @@ public class OperatorController {
     @FXML
     private Label statusLabel;
 
-    private OrderManagerModel orderManagerModel;
+    private OrderManager orderManagerModel;
 
     public OperatorController() {
-        this.orderManagerModel = OrderManagerModel.getInstance(); // Singleton pattern for managing orders
+        this.orderManagerModel = OrderManager.getInstance(); // Singleton pattern for managing orders
     }
 
     @FXML
@@ -37,12 +38,14 @@ public class OperatorController {
         loadOrders();
     }
 
+
     private void loadOrders() {
         List<Order> orders = orderManagerModel.getAllOrders();
         orderListView.setItems(FXCollections.observableArrayList(
-                orders.stream().map(Order::toString).toList()
+                orders.stream().map(Order::toString).collect(Collectors.toList())
         ));
     }
+
 
     @FXML
     private void handleUpdateOrderStatus(ActionEvent event) {
